--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,53 @@
 version: '3.8'
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "8080:8080"
-      - "50051:50051"
+      - "8081:8080"
+      - "50052:50051"
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy  # Ожидание, пока PostgreSQL не станет "здоровым"
+      redis:
+        condition: service_started  # Ожидание, пока Redis не запустится
     environment:
-      - DATABASE_URL=postgres://myuser:mypassword@postgres:5432/mydatabase
-      - REDIS_URL=redis://redis:6379/0
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USER=myuser
+      - DB_PASSWORD=mypassword
+      - DB_NAME=postgres
+      - DB_SSLMODE=disable
+      - CACHE_TYPE=redis
+      - REDIS_ADDR=redis:6379
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   postgres:
-    image: postgres
+    image: postgres:17
     environment:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: postgres
+      POSTGRES_INITDB_ARGS: "--encoding=UTF8 --locale=en_US.UTF-8"
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U myuser -d postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   redis:
-    image: redis
+    image: redis:latest
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+volumes:
+  postgres_data:
+  redis_data:
